# neuralRetrieve

./: .env.example  .gitignore  CLAUDE.md  CLEANUP_SUMMARY.md  CONFIG_GUIDE.md  CONFIG_STATUS.md  CUSTOM_API_GUIDE.md  DESIGN.md  FULFILL.md  README.md  RELEASE_CHECKLIST.md  RUN_GUIDE.md  VERIFICATION_REPORT.md  config.yaml  demo.py  main.py  pyproject.toml  quickstart.sh  test_basic.py  test_custom_api.py  test_imports.py  verify_setup.py
dataset/: hotpotqa_mini.json  hotpotqa_mini_corpus.json
refer/: REFER.md
src/neurogated/: __init__.py  core.py  data_structures.py
src/neurogated/config/: memory_config.py
src/neurogated/embedding_model/: __init__.py  base.py
src/neurogated/evaluation/: __init__.py  dataset_loader.py  metrics.py
src/neurogated/ingestion/: __init__.py  chunker.py  edge_builder.py  entity_extractor.py  ingestion_engine.py
src/neurogated/llm/: __init__.py  base.py  openai_llm.py
src/neurogated/plasticity/: __init__.py  plasticity_engine.py
src/neurogated/prompts/: prompt_manager.py
src/neurogated/retrieval/: __init__.py  kernel_generator.py  spreading_activation.py
src/neurogated/storage/: __init__.py  embedding_store.py  graph_store.py
src/neurogated/utils/: config_loader.py  config_utils.py  hash_utils.py  logging_utils.py  misc_utils.py  yaml_loader.py
